--- a/web/package.json
+++ b/web/package.json
@@ -13,7 +13,7 @@
     "@mantine/core": "^8.3.2",
     "@mantine/hooks": "^8.3.2",
     "@tanstack/react-query": "^5.90.12",
-    "firebase": "^11.0.0",
+    "@supabase/supabase-js": "^2.57.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.3"
